fixed blurr on texts

--- a/main.css
+++ b/main.css
@@ -405,6 +405,7 @@ header nav a:hover {
   .listcontainer{
   	margin-top: 12%;
   	margin-left:10px;
+    text-shadow: 0px 0px 0.5px #999;
   }
 
 
@@ -430,7 +431,7 @@ header nav a:hover {
       font-size: 0.7em;
       margin-top: 10%;
       color: rgb(0, 0, 255);
-    font-family: Arial;
+    font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     text-decoration: none;
   }
